# ecommerce-bigquery-pipeline

./: .gitignore  README.md  pyproject.toml
dagster_ecommerce/: pyproject.toml  setup.py
dagster_ecommerce/dagster_ecommerce/: assets.py  constants.py  definitions.py  schedules.py
dagster_ecommerce/tmpepbyj6x3/history/: runs.db
dagster_ecommerce/tmpepbyj6x3/history/runs/: index.db
dagster_ecommerce/tmpepbyj6x3/schedules/: schedules.db
dbt_ecommerce/: dbt_project.yml
dbt_ecommerce/models/sources/: faker_sources.yml
terraform/airbyte/: .gitignore  .terraform.lock.hcl  main.tf  plan.cache  provider.tf  temp  terraform.tfstate  terraform.tfstate.backup  variables.tf
