[tool.poetry]
name = "bg-ecommerce"
version = "0.1.0"
description = ""
authors = ["miroslaw-steblik <miroslawsteblik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
dbt-bigquery = "^1.7.7"
dagster = "^1.6.14"
dagster-webserver = "^1.6.14"
dagster-dbt = "^0.22.14"
dagster-airbyte = "^0.22.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
